# valisync

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/agents/: gui-test-strategist.md
.claude/skills/gui-test-plan/: SKILL.md
.claude/skills/gui-verify/: SKILL.md
.github/workflows/: ci.yml
.kiro/: ARCHIVE.md
.kiro/specs/valisync-core/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/valisync-gui-axes/: design.md  requirements.md  tasks.md
.kiro/specs/valisync-gui-file-browser/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  spec-authoring.md  structure.md  tech.md  workflow.md
.superpowers/sdd/: task-5-report.md
design/cards/: affordances.html  error_states.html  readout_chip.html
design/proposals/: README.md
docs/: audit-findings-catalog.md  design.md  development.md  dual-agent-workflow.md  file-browser-spec-revision-followup.md  gui-testing-layers.md  multi-axis-empty-region-followup.md  multi-axis-multicolumn-followup.md  policies.md  product.md  realgui-coverage-audit.md  roadmap.md  signal-namespace.md  structure.md  uiux-adversarial-review-catalog.md  valisync-gui-axes-overview.md  valisync-gui-file-browser-overview.md  valisync-gui-mvp-layout-fix-overview.md  workflow.md
scripts/: capture_ui_screenshots.py  compare_screenshots.py  export_design_tokens.py  fu16_prune_bench.py  fu16_teardown_bench.py  generate_demo_mf4.py  generate_sample.py
src/valisync/core/: session.py
tests/: conftest.py  mdf4_helpers.py  test_calcbar.py  test_compare_screenshots.py  test_csv_export_options.py  test_csv_format_detector.py  test_demo_mf4.py  test_downsampler.py  test_example.py  test_export.py  test_format_def.py  test_interpolation.py  test_loaders.py  test_native_dtype_memory.py  test_pbt_calcbar.py  test_pbt_csv.py  test_pbt_downsampler.py  test_pbt_formula.py  test_pbt_interpolation.py  test_pbt_mdf4.py  test_pbt_signal.py  test_pbt_statistics.py  test_pbt_sync.py  test_range_stat_index.py  test_session.py  test_session_signal_map.py  test_signal_group_manager_cache.py  test_signal_range_stat_index.py  test_signal_sorted_view.py  test_statistics.py  test_wheel_packaging.py
tests/gui/: _panel_factory.py  conftest.py  test_active_panel.py  test_app.py  test_app_viewmodel.py  test_app_viewmodel_comparison_mode.py  test_app_viewmodel_offsets.py  test_axis_cursor_gate.py  test_axis_interaction.py  test_axis_zone_classify.py  test_busy_overlay.py  test_channel_browser_view.py  test_channel_browser_vm.py  test_collapsible_dock_title_bar.py  test_color_variants.py  test_context_menus.py  test_cross_panel_axis_move.py  test_csv_format_dialog.py  test_cursor_readout.py  test_cursor_readout_diff.py  test_cursor_shapes.py  test_data_explorer_source_list.py  test_data_explorer_view.py  test_data_sources.py  test_diagnostics_view.py  test_diagnostics_vm.py  test_display_names.py  test_dnd_workflow.py  test_dock_collapse_rail.py  test_dock_toggle_actions.py  test_expansion_confirmer.py  test_expansion_dialog.py  test_export_csv_dialog.py  test_export_worker.py  test_file_browser_delete_confirm.py  test_file_browser_open.py  test_file_browser_view.py  test_file_browser_vm.py  test_file_list_model.py  test_graph_area_comparison_mode.py  (+64 more)
tests/realgui/: _realgui_input.py  conftest.py  test_active_axis_resize.py  test_active_axis_zoom_pan.py  test_active_panel_flow.py  test_analyze_menu_realclick.py  test_axis_cursor_shapes.py  test_axis_hover_frame.py  test_axis_menu_offset.py  test_busy_cancel_realclick.py  test_busy_overlay_resize_realinput.py  test_channel_browser_realclick.py  test_channel_dock_min_width_realclick.py  test_click_activate_axis.py  test_close_release_spinner.py  test_collapsible_docks_realclick.py  test_comparison_model_realclick.py  test_cross_panel_axis_realclick.py  test_csv_import_dialog_realclick.py  test_curve_direct_ops.py  test_data_explorer_file_drop.py  test_data_explorer_realclick.py  test_diagnostics_clear_realclick.py  test_diagnostics_dock_realinput.py  test_dock_onscreen_after_toggle.py  test_expansion_dialog_realinput.py  test_export_flow.py  test_export_range_realclick.py  test_file_browser_realclick.py  test_file_drop_realclick.py  test_fu12_boundary_data_visible.py  test_fu15_axis_deselect.py  test_fu19_overlay_zorder.py  test_global_cursor.py  test_graph_panel_menu_realclick.py  test_grid_realclick.py  test_hit_targets.py  test_journey_smoke.py  test_menu_mnemonics_realclick.py  test_move_then_resize.py  (+17 more)
(+247 files in other folders)
