[project]
name = "my-project"  # TODO: プロジェクト名に変更
version = "0.1.0"
description = ""  # TODO: 説明を追加
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

# [project.scripts]
# my-cli = "src.cli:main"  # TODO: CLI エントリポイント

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "property: Property-based tests (Hypothesis)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",    # line length (formatter handles this)
    # TODO: プロジェクト固有の ignore を追加
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117", "SIM108"]

[tool.mypy]
python_version = "3.12"
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
