[project]
name = "valisync"
version = "0.1.0"
description = "ADAS 時系列信号データ統合・同期・解析デスクトップアプリケーション"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "asammdf>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# [project.scripts]
# valisync = "valisync.gui.app:main"  # Phase 2 で GUI エントリポイントを追加

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "property: Property-based tests (Hypothesis)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",    # line length (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117", "SIM108"]

[tool.mypy]
python_version = "3.12"
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
