[project]
name = "valisync"
version = "0.1.0"
description = "ADAS 時系列信号データ統合・同期・解析デスクトップアプリケーション"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "asammdf>=8.8.22",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# setuptools 既定は .py 以外を wheel から落とす。dev/CI は editable install のため
# 欠落が無症状 (false-green) だが、wheel 配布時にアイコン参照が全滅する (spec §12.2)。
"valisync.gui.theme" = ["icons/**/*.svg", "icons/LICENSES.md"]

[project.scripts]
valisync = "valisync.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "property: Property-based tests (Hypothesis)",
    "realgui: real-OS-input GUI tests (Layer C; real display + Windows; opt-in via --realgui, excluded from CI)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",    # line length (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117", "SIM108"]

[tool.ruff.lint.flake8-bugbear]
# QModelIndex() is the idiomatic invalid-index default in Qt model overrides;
# an invalid index is stateless, so the B008 mutable-default concern is moot.
extend-immutable-calls = ["PySide6.QtCore.QModelIndex"]

[tool.mypy]
python_version = "3.13"
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
